--- a/style.css
+++ b/style.css
@@ -400,6 +400,62 @@ form.search button:hover {
   padding: 0 1.5em;
   border-bottom: 1px solid var(--border-color);
 }
+.dpt-menu .has-child > ul,
+.dpt-menu .mega {
+  position: absolute;
+  top: 0;
+  left: var(--percent100);
+  width: var(--percent100);
+  height: auto;
+  min-height: var(--percent100);
+  padding: 1.5em;
+  font-size: var(--font-small);
+  line-height: 2.5em;
+  border: 1px solid var(--border-color);
+  border-top: 0;
+  display: none;
+  background-position: right bottom;
+  background-repeat: no-repeat;
+  background-size: auto;
+}
+
+/* showing the first sub menu   */
+
+/* .dpt-menu .has-child:nth-child(1) > ul {
+  display: block;
+} */
+
+/* .dpt-menu .mega {
+  display: block;
+} */
+.dpt-menu .beauty ul {
+  background-image: url(assets/menu/menu_bg1.jpg);
+}
+.dpt-menu .electric ul {
+  background-image: url(assets/menu/menu_bg2.jpg);
+}
+.dpt-menu .fashion ul {
+  background-image: url(assets/menu/menu_bg3.jpg);
+}
+.dpt-menu .homekit .mega {
+  background-image: url(assets/menu/menu_bg4.jpg);
+}
+
+.dpt-menu .mega {
+  width: auto;
+  min-width: var(--percent100);
+  /* display: flex; */
+}
+
+.dpt-menu .has-child:hover ul {
+  display: block;
+}
+.dpt-menu .has-child:hover .mega {
+  display: flex;
+}
+.dpt-menu .has-child li a:hover {
+  text-decoration: underline;
+}
 @media screen and (min-width: 700px) {
   .container {
     padding: 0 2em;
